# bpf-lsm

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile  requirements.txt
box/: build-kernel.sh
docker/: README.md
docker/bpf-lsm/: Dockerfile
docker/libbpf/patches/: types.patch
docker/llvm/: Dockerfile
elasticsearch/: bprm_check_security.json  inode_unlink.json
libprobe/: Makefile
libprobe/src/: probe.bpf.c  probe.c
libprobe/src/include/: probe.generated.h  probe.h  probe_bpf.h  probe_common.h  probe_macros.h  vmlinux.h
probe-sys/: .gitignore  Cargo.toml  Makefile  build.rs
probe-sys/scripts/: generate-structures
probe-sys/src/: Makefile  _probe.h  compiler.rs  compiler_generated.rs  constants.rs  errors.rs  ffi_generated.rs  helpers.rs  lib.rs  probe.bpf.c  probe.bpf.h  probe.c  probe.h  probe_generated.rs  query_writer.rs  serial_generated.rs  struct.proto  struct_pb.rs  traits.rs  transform_generated.rs
probe-sys/src/include/: probe.h  probe_bpf.h  probe_common.h  probe_macros.h  vmlinux.h
probe-sys/templates/: compiler.rs.j2  compiler_generated.rs.j2  ffi_generated.rs.j2  lib.rs.j2  probe.bpf.h.j2  probe.c.j2  probe.h.j2  probe_generated.rs.j2  serial_generated.rs.j2  struct.proto.j2  transform_generated.rs.j2
probe-sys/templates/include/: probe.generated.h.j2  probe_bpf.generated.h.j2  probe_common.generated.h.j2
rule-compiler/: Cargo.toml
rule-compiler/src/: lib.rs
schemas/: bprm_check_security.yml  inode_unlink.yml  path_rename.yml
schemas/syscalls/: sys_enter_execve.yml
scripts/: generate-structures  generate-template  upload-rpms.sh
src/: batcher.rs  client.rs  errors.rs  globals.rs  handler.rs  logging.rs  main.rs  rules.rs  tests.rs
templates/: lib.rs.j2  probe.bpf.h.j2  probe.c.j2  probe.h.j2  struct.proto.j2
toolchain/libbpf/: Dockerfile
toolchain/libbpf/patches/: makefile.patch
toolchain/llvm/patches/: LLVMConfig.patch  strtoll.patch
toolchain/rust/: Dockerfile
vm/: README.md  config-5.11.0-rc6-bpf-lsm  image.json
