[package]
name = "probe"
version = "0.0.1"
authors = ["Andrew Stucki <andrew.stucki@gmail.com>"]
license = "GPL"
edition = "2018"
description = "Example BPF LSM in C/Rust"

[dependencies]
probe-sys = { path = "./probe-sys" }
seahorse = "1.1"
ureq = "2.0.1"
ajson = "0.2"
may = "0.3.18"
flate2 = "1.0.20"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev="5f3ed259", features = ["with-bytes"] }
# For use as durable storage
sled = { git = "https://github.com/spacejam/sled", rev="d92e56d" }

[workspace]
members = [ "probe-sys" ]
