[package]
name = "probe"
version = "0.0.1"
authors = ["Andrew Stucki <andrew.stucki@gmail.com>"]
license = "GPL"
edition = "2018"
description = "Example BPF LSM in C/Rust"

[dependencies]
probe-sys = { path = "./probe-sys" }
seahorse = "1.1"
ureq = "2.0.1"
ajson = "0.2"
flate2 = "1.0.20"
chrono = "0.4.19"
log = "0.4"
fern = "0.5"
once_cell = "1.5.2"
spmc = "0.3.0"
num_cpus = "1.13.0"
machine-uid = "0.2.0"
uuid = { version = "0.8.2", features = ["v4"] }
# For use as durable storage
sled = { git = "https://github.com/spacejam/sled", rev = "d92e56d" }

[workspace]
members = [ "probe-sys" ]
