[package]
name = "probe-sys"
version = "0.0.1"
authors = ["Andrew Stucki <andrew.stucki@gmail.com>"]
license = "GPL"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
log = "0.4"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev="5f3ed259", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf", rev="5f3ed259" }
