[package]
name = "probe-sys"
version = "0.0.1"
authors = ["Andrew Stucki <andrew.stucki@gmail.com>"]
license = "GPL"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
rule-compiler = { path = "../rule-compiler" }
log = "0.4"
once_cell = "1.5.2"
users = "0.11.0"
machine-uid = "0.2.0"
sha2 = "0.9.3"
pnet = "0.27.2"
sysinfo = { version = "0.16.0", default-features = false }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev="5f3ed259", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf", rev="5f3ed259" }
